css/style.css
/* ... */
button, input {
	outline:none;
}

html {
	width: 100%;
	height: 100%;
  box-sizing: border-box;
}
body {
	height: 100%;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
	background-color: #f9f9f9;
}

a {
  text-decoration: none;
  color: white;
}

a:hover {
  cursor: pointer;
}

.hide {
	position: absolute !important;
	top: -9999px !important;
	left: -9999px !important;
}

.show {
	display:block;
}

/* Navbar */
nav {
	margin: 0;
	padding: 0;
	border: 0;
	top: 0;
	width: 100%;
	height: 48px;
	z-index: 9999;
	background-color: #2196F3;
	position: fixed;
}
nav ul {
	padding: 8px;
	padding-right: 0px;
	list-style-type: none;
	display: inline-block;
}
nav ul li {
	display: inline-block;
	vertical-align: top;
}
.searchContainer input {
	width: 33%;
	padding: 8px;
	margin: 0 auto;
	font-size: 16px;
	left: 0;
	right: 0;
	display: inline-block;
	position: absolute;
	vertical-align: top;
	border-radius:2px;
}

nav ul li a {
	font-size: 22px;
	color: white;
}
nav button {
	height: 32px;
	vertical-align: top;
	width: 40px;
	z-index: 9999;
}

.cog:hover {
   -webkit-animation: rotateCog 2.5s infinite
   -moz-animation:    rotateCog 2.5s infinite;
   -o-animation:      rotateCog 2.5s infinite;
   animation:         rotateCog 2.5s infinite;
}
@keyframes rotateCog{
  0% {
    transform: rotate(0deg) ;
  }
  100% {
    transform: rotate(360deg) ;
  }
}
nav button img:hover {
	-webkit-transform: scale(1.15);
    -moz-transform: scale(1.15);
    -o-transform: scale(1.15);
    animation: scale(1.15);
}

.searchContainer button img, nav button img {
	height: 100%;
}

.notification-tray {
	height: 400px;
	width: 280px;
	position: fixed;
	z-index: 9998;
	top: 48px;
	right: 0;
	display: block;
	background-color: rgb(122,122,122);
}

.notification-tray ul{
	height:392px; width:100%;
	overflow:hidden;
	overflow-y:scroll;
}

.notification-card {
	position: relative;
	width: 95%;
	height: 92px;
	margin: 0 auto;
	margin-top: 8px;
	padding: 8px;
	background-color: white;
}

.notification-card  h2 {
	font-size: 18px;
}

.notification-card .card__action-bar .card__button {
  line-height: 32px;
  padding: 0 8px;
  color: #FF1744;
}

.dropdown-container {
	position: relative;
	z-index: 9999;
	top: 0;
	right: 0;
	display: block;
}
.dropdown-content {
	position: fixed;
	right: 0;
	top: 48px;
	z-index: 9999;
	background-color: #f9f9f9;
	min-width: 160px;
	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
	-webkit-transform: translateZ(0);
}

.dropdown-content button {
	color: black;
	padding: 12px 16px;
	text-decoration: none;
	display: block;
	width: 100%;
	text-align: left;
}

.dropdown-content button:hover {
	background-color: #f1f1f1;
	cursor: pointer;
}

nav h2 {
	color: white;
}
.searchContainer {
	display: inline-block;
	text-align: center;
	padding-top: 6px;
	vertical-align: top;
}

.navbar-right {
	position: absolute;
	right: 8px;
}

/* Bookmark */
.bookmark {
	width: 95%;
	background-color: white;
	height: 104px;
	display: block !important;
	position: relative;
	padding: 16px;
	/*box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);*/
	box-shadow:0 1px 2px #aaa;
	margin: 0 auto;
	margin-bottom: 4px;
}
.bookmark h2 {
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	width: 100%;
}
.noFolderBookmark{
	width: 100% !important;
}

.bookmark a {
	width: 100%;
	height: 100%;
	display:block;
}
.bookmark .fab {
	z-index: 9997;
}

.bookmark:hover {
  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}

/* Add style for containers*/
.container{
	height:100%;
	width:100%;
}

.side-nav-container {
	display: inline;
	float: left;
	width: 10%;
	margin-top: 70px;
	margin-left: 48px;
	margin-right: 48px;
}
.side-nav-container h2 {
	font-size: 22px;
	font-weight: 600;
	margin-bottom: 16px;
	text-align: left;
}
.side-nav-divider {
	border-bottom: 1px solid #dcdce0;
	height: 1px;
  	padding: .6em 0 0;
}

.side-nav-container li {
	list-style: none;
    margin-bottom: 10px;
}

.side-nav-container li button {
	font-size: 20px;
	text-align: left;
}
.side-nav-container li button:hover {
	color: #2196F3;
	cursor: pointer;
}

.right-container{
	display: inline;
	float:left;
 	width: 40%;
	margin-top: 48px;
}

.slide-container {
	display: inline;
	float:left;
 	width: 30%;
	margin: 0 auto;
	margin-top: 48px;
}

.folderContainer {
	margin: 0 auto;
	margin-bottom: 16px !important;
	text-align: center;
}
.folder:hover {
	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}
.folder {
	background-color: white;
	height: 32px;
	border-radius: 1px;
	display: block !important;
	position: relative;
	box-shadow:0 1px 2px #aaa;
	margin: 0 auto;
	margin-bottom: 4px;
}
.folder button.folderToggle {
	display: inline-block;
	height: 100%;
	width: 85%;
	position: absolute;
	left: 0;
}
.folder button {
	height: 100%;
	float: right;
}
.folder button img {
	height: 80%;
	vertical-align: middle;
}

.folder button img:hover {
	-webkit-transform: scale(1.15);
    -moz-transform: scale(1.15);
    -o-transform: scale(1.15);
    animation: scale(1.15);
}

.folder button.folderToggle img  {
	height: 100% !important;
	vertical-align: top;
	float: left;
	margin-left: 8px;
}
.folder h2 {
	display: inline-block;
	padding: 5px;
	padding-left: 16px;
	line-height: 22px;
	font-size: 22px;
	margin-left: 32px;
	color: #4c4c4c;
	vertical-align: top;
}

.folderContent ul {
	padding: 0;
	margin: 0;
	list-style-type: none;
	height: 100%;
}

.openFolderAnim {
	-webkit-animation: openFolderFrames .350s ease-in-out forwards;
   -moz-animation:    openFolderFrames .350s ease-in-out forwards;
   -o-animation:      openFolderFrames .350s ease-in-out forwards;
   animation:         openFolderFrames .350s ease-in-out forwards;
}
.removeFolderAnim {
	-webkit-animation: removeFolderFrames .350s forwards;
   -moz-animation:    removeFolderFrames .350s forwards;
   -o-animation:      removeFolderFrames .350s forwards;
   animation:         removeFolderFrames .350s forwards;
}
/* ... */

